<resources>
    <string name="gf_app_name">Google Feedback</string>
    <string name="gf_back">Back</string>
    <string name="gf_feedback">Feedback</string>
    <string name="gf_user_account">User Account</string>
    <string name="gf_anonymous">Anonymous</string>
    <string name="gf_choose_an_account">Choose an account</string>
    <string name="gf_report_feedback">Report An Issue</string>
    <string name="gf_screenshot_preview">Screenshot Preview</string>
    <string name="gf_preview">Preview</string>
    <string name="gf_send">Send</string>
    <string name="gf_preview_feedback">Preview feedback</string>
    <string name="gf_no_data">No data</string>
    <string name="gf_privacy">Privacy</string>
    <string name="gf_include_system_data">Include system data</string>
    <string name="gf_include_screenshot">Include screenshot</string>
    <string name="gf_this_will_help">Share system data with Google, to better diagnose the problem.</string>
    <string name="gf_this_will_help_screenshot">Send screenshot of the last page you were on.</string>
    <string name="gf_unknown_app">Unknown application</string>
    <string name="gf_report_being_sent">Thanks, your report is being sent.</string>
    <string name="gf_report_sent_failure">Sorry, there was an error sending your report.</string>
    <string name="gf_report_queued">Your device seems to be offline. We will retry when you are connected.</string>
    <string name="gf_optional_description">Description (optional)</string>
    <string name="gf_system_log">System Log</string>
    <string name="gf_sys_logs">System Logs</string>
    <string name="gf_privacy_policy">Privacy Policy</string>
    <string name="gf_privacy_text">By selecting [Send] you acknowledge and agree that any information contained in the feedback report will be used by Google in accordance with the Google privacy policies applicable to the application through which you initiated the report. You agree that Google may use any feedback that you provide to improve any Google products or services.</string>
    <string name="gf_build_view">Build Data</string>
    <string name="gf_network_data">Network</string>
    <string name="gf_network_name">Network Name</string>
    <string name="gf_error_report_system">System</string>
    <string name="gf_error_report_package_version">Package version</string>
    <string name="gf_error_report_package_version_name">Package version name</string>
    <string name="gf_error_report_package_name">Package name</string>
    <string name="gf_error_report_installer_package_name">Installed by</string>
    <string name="gf_error_report_process_name">Process name</string>
    <string name="gf_error_report_time">Time</string>
    <string name="setting_handwriting_timeout_title">Handwriting speed</string>
    <string name="setting_handwriting_timeout_seekbar_text_left">Slow</string>
    <string name="setting_handwriting_timeout_seekbar_text_right">Fast</string>
    <string name="setting_handwriting_stroke_width_title">Handwriting stroke width</string>
    <string name="setting_handwriting_stroke_width_seekbar_text_left">Thin</string>
    <string name="setting_handwriting_stroke_width_seekbar_text_right">Thick</string>
    <string name="setting_handwriting_feedback_title">Help improve handwriting</string>
    <string name="pref_key_handwriting_timeout_ms">handwriting_timeout_ms</string>
    <string name="pref_def_value_handwriting_timeout_ms">500</string>
    <string name="pref_key_handwriting_stroke_width_scale">handwriting_stroke_width_scale</string>
    <string name="pref_key_enable_handwriting_feedback">enable_handwriting_feedback</string>
    <string name="pref_key_enable_incremental_gesture_input">enable_incremental_gesture_input</string>
    <string name="setting_keyboard_slide_sensitivity_ratio_title">Slide input sensitivity</string>
    <string name="setting_keyboard_slide_sensitivity_ratio_text_left">Low</string>
    <string name="setting_keyboard_slide_sensitivity_ratio_text_right">High</string>
    <string name="setting_keyboard_height_ratio_title">Keyboard height</string>
    <string name="setting_keyboard_height_ratio_text_left">Short</string>
    <string name="setting_keyboard_height_ratio_text_right">Tall</string>
    <string name="pref_key_english_prediction">enable_english_prediction</string>
    <string name="pref_key_spell_correction">enable_spell_correction</string>
    <string name="pref_key_auto_capitalization">enable_auto_capitalization</string>
    <string name="pref_key_auto_space_smart_punctuation">enable_auto_space_smart_punctuation</string>
    <string name="pref_key_chinese_traditional_input">enable_chinese_traditional_input</string>
    <string name="pref_key_enable_user_metrics">enable_user_metrics</string>
    <string name="pref_key_enable_sound_on_keypress">enable_sound_on_keypress</string>
    <string name="pref_key_sound_volume_on_keypress">sound_volume</string>
    <string name="pref_key_enable_vibrate_on_keypress">enable_vibrate_on_keypress</string>
    <string name="pref_key_enable_voice_input">enable_voice_input</string>
    <string name="pref_key_enable_spatial_model">enable_spatial_model</string>
    <string name="pref_key_enable_gesture_input">enable_gesture_input</string>
    <string name="pref_key_keyboard_slide_sensitivity_ratio">keyboard_slide_sensitivity_ratio</string>
    <string name="pref_def_value_keyboard_slide_sensitivity_ratio">1.0</string>
    <string name="pref_key_keyboard_height_ratio">keyboard_height_ratio</string>
    <string name="pref_def_value_keyboard_height_ratio">1.0</string>
    <string name="setting_sync_category_key">setting_sync_category_key</string>
    <string name="setting_sync_now_key">setting_sync_now_key</string>
    <string name="setting_sync_clear_key">setting_sync_clear_key</string>
    <string name="setting_about_key">setting_about_key</string>
    <string name="setting_keyboard_key">setting_keyboard_key</string>
    <string name="setting_other_category_title">Other settings</string>
    <string name="setting_fault_tolerance_title">Stroke fault tolerance</string>
    <string name="setting_gesture_input_title">Chinese gesture typing</string>
    <string name="setting_gesture_input_preview">Dynamic suggestion preview</string>
    <string name="setting_prediction_chinese_title">Chinese prediction</string>
    <string name="setting_prediction_english_title">English prediction</string>
    <string name="setting_spell_correction_title">Auto spell correction</string>
    <string name="setting_auto_capitalization_title">Auto capitalization</string>
    <string name="setting_auto_space_smart_punctuation_title">Auto space insertion</string>
    <string name="setting_tradition_title">Traditional Chinese</string>
    <string name="setting_user_metrics_title">Send usage statistics</string>
    <string name="setting_chinese_intelligent_correction">Intelligent correction</string>
    <string name="setting_fuzzy_pinyin_title">Fuzzy Pinyin</string>
    <string name="setting_fuzzy_pinyin_detail_title">Fuzzy Pinyin settings</string>
    <string name="setting_enabled">Enabled</string>
    <string name="setting_disabled">Disabled</string>
    <string name="setting_input">Input settings</string>
    <string name="setting_input_summary">Traditional/simplified, prediction, auto correction, gesture typing, fuzzy Pinyin, etc.</string>
    <string name="setting_chinese_input">Chinese input settings</string>
    <string name="setting_english_input">English input settings</string>
    <string name="setting_handwriting_input">Handwriting settings</string>
    <string name="setting_handwriting_input_summary">Speed, stroke width, etc.</string>
    <string name="setting_keyboard">Keyboard settings</string>
    <string name="setting_keyboard_summary">Volume, keyboard height, etc.</string>
    <string name="setting_advanced">Advanced settings</string>
    <string name="setting_advanced_summary">Dictionary update, dictionary sync, etc.</string>
    <string name="setting_legal">Legal information</string>
    <string name="setting_legal_summary">Terms of service, privacy policy, etc.</string>
    <string name="setting_send_feedback_title">Send feedback</string>
    <string name="setting_license_title">Open source licenses</string>
    <string name="setting_license_summary">License details for open source software</string>
    <string name="setting_tutorial_title">Usage tips</string>
    <string name="setting_sound_on_keypress_title">Sound on keypress</string>
    <string name="setting_sound_volume_of_keypress">Volume on keypress</string>
    <string name="setting_vibrate_on_keypress_title">Vibrate on keypress</string>
    <string name="setting_voice_input_title">Show voice input button</string>
    <string name="setting_title">Google Pinyin settings</string>
    <string name="setting_update_category_title">Dictionary update</string>
    <string name="setting_update_notify_enabled_title">Dictionary update notification</string>
    <string name="setting_update_enabled_title">Dictionary update</string>
    <string name="setting_sync_category_title">User dictionary synchronization</string>
    <string name="setting_sync_enabled_title">Synchronize user dictionary</string>
    <string name="setting_sync_now_title">Synchronize now</string>
    <string name="setting_sync_clear_title">Clear server user dictionary</string>
    <string name="setting_privacy_title">Privacy policy</string>
    <string name="setting_tos_title">Terms of service</string>
    <string name="setting_about_title">About</string>
    <string name="setting_about_version_title">"Current version: "</string>
    <string name="pref_key_stroke_fault_tolerance">enable_stroke_fault_tolerance</string>
    <string name="pref_key_chinese_prediction">enable_chinese_prediction</string>
    <string name="pref_key_enable_dictionary_update">new_word_update</string>
    <string name="pref_key_enable_notify_dictionary_update">new_word_update_notify</string>
    <string name="pref_key_enable_sync_user_dictionary">sync</string>
    <string name="pref_key_fuzzy_pinyin">fuzzy_pinyin</string>
    <string name="pref_key_fuzzy_pinyin_z_zh">fuzzy_pinyin_z_zh</string>
    <string name="pref_key_fuzzy_pinyin_c_ch">fuzzy_pinyin_c_ch</string>
    <string name="pref_key_fuzzy_pinyin_s_sh">fuzzy_pinyin_s_sh</string>
    <string name="pref_key_fuzzy_pinyin_an_ang">fuzzy_pinyin_an_ang</string>
    <string name="pref_key_fuzzy_pinyin_en_eng">fuzzy_pinyin_en_eng</string>
    <string name="pref_key_fuzzy_pinyin_in_ing">fuzzy_pinyin_in_ing</string>
    <string name="pref_key_fuzzy_pinyin_l_n">fuzzy_pinyin_l_n</string>
    <string name="pref_key_fuzzy_pinyin_f_h">fuzzy_pinyin_f_h</string>
    <string name="pref_key_fuzzy_pinyin_r_l">fuzzy_pinyin_r_l</string>
    <string name="pref_key_fuzzy_pinyin_k_g">fuzzy_pinyin_k_g</string>
    <string name="pref_key_fuzzy_pinyin_ian_iang">fuzzy_pinyin_ian_iang</string>
    <string name="pref_key_fuzzy_pinyin_uan_uang">fuzzy_pinyin_uan_uang</string>
    <string name="setting_fuzzy_pinyin_option_z_zh">z = zh</string>
    <string name="setting_fuzzy_pinyin_option_c_ch">c = ch</string>
    <string name="setting_fuzzy_pinyin_option_s_sh">s = sh</string>
    <string name="setting_fuzzy_pinyin_option_an_ang">an = ang</string>
    <string name="setting_fuzzy_pinyin_option_en_eng">en = eng</string>
    <string name="setting_fuzzy_pinyin_option_in_ing">in = ing</string>
    <string name="setting_fuzzy_pinyin_option_l_n">l = n</string>
    <string name="setting_fuzzy_pinyin_option_f_h">f = h</string>
    <string name="setting_fuzzy_pinyin_option_r_l">r = l</string>
    <string name="setting_fuzzy_pinyin_option_k_g">k = g</string>
    <string name="setting_fuzzy_pinyin_option_ian_iang">ian = iang</string>
    <string name="setting_fuzzy_pinyin_option_uan_uang">uan = uang</string>
    <string name="privacy_url">http://www.google.com/policies/privacy/</string>
    <string name="tos_url">http://www.google.com/policies/terms/</string>
</resources>